01-HW files with code added

--- a/01-HW-variables-data-types/index.html
+++ b/01-HW-variables-data-types/index.html
@@ -7,6 +7,22 @@
     <title>01-HW</title>
 </head>
 <body>
-<h1>HELLO WORLD</h1>
+<div>
+    <h1>Vasil Peretyatko</h1>
+    <ol>
+        <li>
+            <a target="_blank" 
+               href="https://github.com/VasilPeretyatko/js-homework-VasiaPeretyatko">
+               01-HW-variables-data-types
+            </a>
+        </li>
+    </ol>
+</div>
+
+
+
+<!--github page
+https://vasilperetyatko.github.io/js-homework-VasiaPeretyatko/01-HW-variables-data-types/index.html
+-->
 </body>
 </html>
