02-hm files added(1.0)

--- a/02-HW-loops-conditions/index.html
+++ b/02-HW-loops-conditions/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/02-hw.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="js\02-hw.js"></script>
     <title>02-HW</title>
-</head>
-<body>
-<div>
-    <h1>Vasil Peretyatko</h1>
-    <ol>
+  </head>
+  <body>
+    <div>
+      <h1>Vasil Peretyatko</h1>
+      <ol>
         <li>
-            <a target="_blank" 
-               href="https://github.com/VasilPeretyatko/js-homework-VasiaPeretyatko">
-               02-HW-loops-conditions
-            </a>
+          <a
+            target="_blank"
+            href="https://github.com/VasilPeretyatko/js-homework-VasiaPeretyatko"
+          >
+            02-HW-loops-conditions
+          </a>
         </li>
-    </ol>
-</div>
-</body>
+      </ol>
+    </div>
+
+    <div id="My number"></div>
+  </body>
 </html>
