--- a/07-HW-closers-key_word_this/index.html
+++ b/07-HW-closers-key_word_this/index.html
@@ -3,22 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="js\07-hw.js"></script>
-    <title>06-HW</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>VASILEVS</title>
   </head>
   <body>
-    <div>
-      <h1>Vasil Peretyatko</h1>
-      <ol>
-        <li>
-          <a
-            target="_blank"
-            href="https://github.com/VasilPeretyatko/js-homework-VasiaPeretyatko"
-          >
-            07-HW-closers. key word this
+    <header class="header-top">
+      <div class="header-top__container container-wrap">
+        <div class="header-top__logo logo">
+          <a href="#" class="header-top__logo_link logo_text">
+            <span aria-hidden="true" class="logo_text_span">vasilevs</span
+            >vasilevs<span class="logo_text_span">vasilevs</span>
           </a>
-        </li>
-      </ol>
-    </div>
+        </div>
+
+        <nav class="header-top__nav">
+          <ul class="header-top__nav_list">
+            <li class="header-top__nav_list_item">
+              <a href="#about-me_id" class="header-top__nav_list_item_link"
+                >about me</a
+              >
+            </li>
+            <li class="header-top__nav_list_item">
+              <a
+                href="https://github.com/VasilPeretyatko/js-homework-VasiaPeretyatko"
+                class="header-top__nav_list_item_link"
+                target="_blank"
+                >GITHUBE</a
+              >
+            </li>
+            <li class="header-top__nav_list_item">
+              <a href="#contact_id" class="header-top__nav_list_item_link"
+                >Home Works</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="main-page">
+      <div class="main-page__container container-wrap">
+        <h1 class="main-page__title">peretyatko vasyl</h1>
+        <div class="main-page__sub-title">web developer</div>
+      </div>
+    </section>
+
+    <!-- <section class="about-me border-gradient" id="about-me_id">
+      <div class="about-me__container container-wrap">
+        <h2 class="about-me__title common-title">about me</h2>
+      </div>
+    </section>
+
+    <section class="my-works border-gradient" id="my-works_id">
+      <div class="my-works__container container-wrap">
+        <h2 class="my-works__title common-title">my works</h2>
+      </div>
+    </section>
+
+    <section class="contact border-gradient" id="contact_id">
+      <div class="contact__container container-wrap">
+        <h2 class="contact__title common-title">contact</h2>
+      </div>
+    </section> -->
+
+    <script src="./js/07-hw.js"></script>
   </body>
 </html>
