--- a/07-HW-closers-key_word_this/index.html
+++ b/07-HW-closers-key_word_this/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./pictures/panda.png" />
     <title>VASILEVS</title>
   </head>
   <body>
