main index fixed

--- a/07-HW-closers-key_word_this/index.html
+++ b/07-HW-closers-key_word_this/index.html
@@ -37,7 +37,7 @@
               >
             </li>
             <li class="header-top__nav_list_item">
-              <a href="#contact_id" class="header-top__nav_list_item_link"
+              <a href="#my-works_id" class="header-top__nav_list_item_link"
                 >Home Works</a
               >
             </li>
@@ -57,14 +57,14 @@
       <div class="about-me__container container-wrap">
         <h2 class="about-me__title common-title">about me</h2>
       </div>
-    </section>
+    </section> -->
 
     <section class="my-works border-gradient" id="my-works_id">
       <div class="my-works__container container-wrap">
-        <h2 class="my-works__title common-title">my works</h2>
+        <h2 class="my-works__title common-title">home works</h2>
       </div>
     </section>
-
+    <!-- 
     <section class="contact border-gradient" id="contact_id">
       <div class="contact__container container-wrap">
         <h2 class="contact__title common-title">contact</h2>
